overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getting-started
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - production.misfitknit.com
    secretName: getting-started-tls
  rules:
  - host: production.misfitknit.com
    http:
      paths:
      - backend:
          service:
            name: getting-started
            port:
              number: 8000
        pathType: ImplementationSpecific
